# ReSTIR

./: Cargo.toml
crates/restir/: Cargo.toml  build.rs
crates/restir-shader/: Cargo.toml
crates/restir-shader/src/: camera.rs  lib.rs
crates/restir-shader/src/material/: debug.rs  image_shader.rs  mod.rs
crates/restir-shader/src/material/light/: analytical.rs  mod.rs  radiance.rs  scene.rs
crates/restir-shader/src/material/pbr/: eval.rs  mod.rs  model.rs  shader.rs
crates/restir-shader/src/material/system/: image_shader.rs  mod.rs
crates/restir-shader/src/utils/: affine.rs  affine_transform.rs  mod.rs  view_range.rs
crates/restir-shader/src/visibility/: barycentric.rs  debug.rs  id.rs  mod.rs  model.rs  raster.rs  scene.rs
crates/restir/src/: lib.rs  main.rs  main_loop.rs
crates/restir/src/controls/: fps_camera_controller.rs  fps_ui.rs  mod.rs  visi_debug_selector.rs
crates/restir/src/material/: debug.rs  light.rs  mod.rs  pass.rs  pbr.rs  pipeline.rs
crates/restir/src/material/system/: image_pipeline.rs  material_pipeline.rs  mod.rs
crates/restir/src/model/: mod.rs  model.rs  parametized.rs
crates/restir/src/model/gltf/: image.rs  import.rs  load.rs  mod.rs
crates/restir/src/visibility/: debug.rs  debug_models.rs  mod.rs  model.rs  raster.rs  renderer.rs  scene.rs
rust-gpu-bindless/: Cargo.toml
rust-gpu-bindless/crates/buffer-content/src/: primitive.rs
rust-gpu-bindless/crates/core/src/backing/: table.rs
rust-gpu-bindless/crates/core/src/descriptor/: dyn_buffer.rs  mod.rs
rust-gpu-bindless/crates/core/src/pipeline/: mut_or_shared.rs  recording.rs  rendering.rs
rust-gpu-bindless/crates/core/src/platform/: bindless_pipeline.rs
rust-gpu-bindless/crates/core/src/platform/ash/: convert.rs  recording.rs
rust-gpu-bindless/crates/egui-examples/: Cargo.toml
rust-gpu-bindless/crates/egui-examples/src/: lib.rs
rust-gpu-bindless/crates/egui-shaders/: Cargo.toml
rust-gpu-bindless/crates/egui/src/: renderer.rs
rust-gpu-bindless/crates/shader-builder/src/: lib.rs
rust-gpu-bindless/crates/shaders/src/descriptor/: buffer.rs  dyn_buffer.rs  mod.rs
rust-gpu-bindless/tests/integration-test-shader/: Cargo.toml
rust-gpu-bindless/tests/integration-test-shader/src/: lib.rs
rust-gpu-bindless/tests/integration-test/src/: triangle.rs
