[workspace]
members = [
	"rust-gpu-bindless/crates/bindless",
	"rust-gpu-bindless/crates/buffer-content",
	"rust-gpu-bindless/crates/core",
	"rust-gpu-bindless/crates/egui",
	"rust-gpu-bindless/crates/egui-examples",
	"rust-gpu-bindless/crates/egui-shaders",
	"rust-gpu-bindless/crates/macro-utils",
	"rust-gpu-bindless/crates/macros",
	"rust-gpu-bindless/crates/shaders",
	"rust-gpu-bindless/crates/shader-builder",
	"rust-gpu-bindless/crates/winit",
	"crates/restir",
	"crates/restir-shader",
]
resolver = "2"



[workspace.package]
version = "0.1.0"
authors = ["Firestar99"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/spacegamedev/space-rust"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }



[workspace.dependencies]
# members
rust-gpu-bindless = { path = "rust-gpu-bindless/crates/bindless" }
rust-gpu-bindless-core = { path = "rust-gpu-bindless/crates/core" }
rust-gpu-bindless-buffer-content = { path = "rust-gpu-bindless/crates/buffer-content" }
rust-gpu-bindless-egui = { path = "rust-gpu-bindless/crates/egui" }
rust-gpu-bindless-egui-shaders = { path = "rust-gpu-bindless/crates/egui-shaders" }
rust-gpu-bindless-macro-utils = { path = "rust-gpu-bindless/crates/macro-utils" }
rust-gpu-bindless-macros = { path = "rust-gpu-bindless/crates/macros" }
rust-gpu-bindless-shaders = { path = "rust-gpu-bindless/crates/shaders" }
rust-gpu-bindless-shader-builder = { path = "rust-gpu-bindless/crates/shader-builder" }
rust-gpu-bindless-winit = { path = "rust-gpu-bindless/crates/winit" }
restir = { path = "crates/restir" }
restir-shader = { path = "crates/restir-shader" }

# vulkan
ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
presser = "0.3.1"

winit = { version = "0.30" }

# rust-gpu
cargo-gpu-install = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "70160693564611ca85e17a3c441da93ee642d29a" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "a30bd43db45f2bfe260051f44141e5eaffcbb4b0", features = ["bytemuck"] }

# async
futures = "0.3"
pollster = "0.4.0"

# codegen
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
konst = "0.3"
prettyplease = "0.2"
proc-macro-crate = "3.1.0"

# bytes and numbers
glam = { version = "0.30.9", default-features = false, features = ["libm", "bytemuck"] }
libm = { version = "0.2", default-features = false }
bytemuck = { version = "1.13", features = ["min_const_generics"] }
bytemuck_derive = "1.4"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-derive = "0.4.2"

# profiling
profiling = "1.0"

# egui
egui = "=0.29.1"
epaint = "=0.29.1"
egui-winit = "=0.29.1"
egui_demo_lib = "=0.29.1"

# other
once_cell = "1.18"
smallvec = { version = "1.11", features = ["const_generics", "const_new", "union"] }
static_assertions = "1.1.0"
parking_lot = "0.12"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
rangemap = "1.5.1"
anyhow = "1.0"
num_enum = { version = "0.7.2", default-features = false }
bitflags = "2.6.0"
thiserror = "2.0.6"
rustc-hash = "2.1.1"



# Optimize certain crates even in dev mode:
# egui
[profile.dev.package.epaint]
opt-level = 3
[profile.dev.package.emath]
opt-level = 3
[profile.dev.package.ecolor]
opt-level = 3
