[package]
name = "restir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "restir"

[lints]
workspace = true

[dependencies]
# members
rust-gpu-bindless = { workspace = true, features = ["ash"] }
rust-gpu-bindless-shaders.workspace = true
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }
restir-shader.workspace = true

# vulkan
winit.workspace = true
ash.workspace = true

# bytes and numbers
glam.workspace = true

# egui
egui = { workspace = true }
rust-gpu-bindless-egui = { workspace = true, features = ["winit"] }

# other
smallvec.workspace = true
anyhow.workspace = true
profiling.workspace = true

[build-dependencies]
anyhow.workspace = true
rust-gpu-bindless-shader-builder.workspace = true
